# telegram-payments-bot

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
src/: __main__.py  app.py  requirements.txt
src/bot/: __init__.py
src/bot/handlers/: __init__.py  chat.py  commands.py  messages.py  payments.py
src/bot/keyboards/: reply.py
src/bot/middlewares/: logging.py
src/bot/states/: payment.py
src/core/: __init__.py  config.py
src/models/: course.py
src/routers/: __init__.py  telegram.py
src/services/: course.py
